--- a/index-fr.html
+++ b/index-fr.html
@@ -171,43 +171,50 @@ $(".submit").click(function(){
 	return false;
 })
 </style>
+
+<!DOCTYPE html>
+<html lang="fr">
+<body>
 <!-- multistep form -->
 <form id="msform" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mknqangd" method="post">
   <!-- fieldsets -->
   <fieldset>
-    <h2 class="fs-title">Get In Touch With Us!</h2>
+    <h2 class="fs-title">Prenez contact avec nous!</h2>
     <!-- Name of Company -->
-    <input type="text" name="company" placeholder="Company" />
+    <input type="text" name="company" placeholder="Nom de la compagnie" />
     <!-- Clients First Name -->
-    <input type="text" name="firstN" placeholder="First Name" />
+    <input type="text" name="firstN" placeholder="Prénom" />
     <!-- Clients Last Name -->
-    <input type="text" name="lastN" placeholder="Last Name" />
+    <input type="text" name="lastN" placeholder="Nom de famille" />
     <!-- Clients Position -->
     <input type="text" name="position" placeholder="Position" />
     <!-- Clients Email -->
     <input type="text" name="email" placeholder="Email" />
     <!-- Clients Mobile Number -->
-    <input type="text" name="mobile" placeholder="Mobile Number" />
+    <input type="text" name="mobile" placeholder="Numéro de portable" />
     <!-- Clients Landline Number -->
     <input type="text" name="landL" placeholder="LandLine" />
     <!-- Clients Postal Address -->
-    <input type="text" name="postal" placeholder="Postal Address" />
+    <input type="text" name="postal" placeholder="Adresse postale" />
     <!-- Clients Zip Code -->
-    <input type="text" name="zip" placeholder="Zip Code" />
+    <input type="text" name="zip" placeholder="Code postal" />
     <!-- Clients City -->
-    <input type="text" name="city" placeholder="City" />
+    <input type="text" name="city" placeholder="Ville" />
  <!-- Clients Country -->
-    <input type="text" name="country" placeholder="Country" />
+    <input type="text" name="country" placeholder="Pays" />
 <!-- Clients choice of products -->
     <input type="text" name="products" placeholder="Choice of Products" />
-    <select id="cars" name="products">
-    <option value="" disabled selected hidden>Choice of Seminar</option>  
-    <option value="seminar1">AI Seminar</option>
-    <option value="seminar2">Finance Seminar</option>
-    <option value="seminar3">Marketing Seminar</option>
-    <option value="seminar4">Management Seminar</option>
+    <select id="prd" name="products">
+    <option value="" disabled selected hidden>Choix du séminaire</option>  
+    <option value="Séminaire AI">Séminaire AI</option>
+    <option value="Séminaire Finance">Séminaire Finance</option>
+    <option value="Séminaire marketing">Séminaire marketing</option>
+    <option value="Séminaire de gestion">Séminaire de gestion</option>
   </select>
    
     <input type="submit" name="submit" class="submit action-button" value="Submit" />
   </fieldset>
 </form>
+	
+</body>
+</html>
