--- a/index.html
+++ b/index.html
@@ -181,32 +181,32 @@ $(".submit").click(function(){
   <fieldset>
     <h2 class="fs-title">Prenez contact avec nous!</h2>
     <!-- Name of Company -->
-    <input type="text" name="company" placeholder="Nom de la compagnie" />
+    <input type="text" name="company" placeholder="nombre de empresa" />
     <!-- Clients First Name -->
-    <input type="text" name="firstN" placeholder="Prénom" />
+    <input type="text" name="firstN" placeholder="Nombre de pila" />
     <!-- Clients Last Name -->
-    <input type="text" name="lastN" placeholder="Nom de famille" />
+    <input type="text" name="lastN" placeholder="Apellido" />
     <!-- Clients Position -->
-    <input type="text" name="position" placeholder="Position" />
+    <input type="text" name="position" placeholder="Posición" />
     <!-- Clients Email -->
     <input type="text" name="email" placeholder="Email" />
     <!-- Clients Mobile Number -->
-    <input type="text" name="mobile" placeholder="Numéro de portable" />
+    <input type="text" name="mobile" placeholder="Número de teléfono móvil" />
     <!-- Clients Landline Number -->
-    <input type="text" name="landL" placeholder="LandLine" />
+    <input type="text" name="landL" placeholder="Teléfono fijo" />
     <!-- Clients Postal Address -->
-    <input type="text" name="postal" placeholder="Adresse postale" />
+    <input type="text" name="postal" placeholder="Direccion postal" />
     <!-- Clients Zip Code -->
-    <input type="text" name="zip" placeholder="Code postal" />
+    <input type="text" name="zip" placeholder="Código postal" />
     <!-- Clients City -->
-    <input type="text" name="city" placeholder="Ville" />
+    <input type="text" name="city" placeholder="Ciudad" />
  <!-- Clients Country -->
-    <input type="text" name="country" placeholder="Pays" />
+    <input type="text" name="country" placeholder="País" />
 <!-- Clients choice of products -->
     <input type="text" name="products" placeholder="Choice of Products" />
     <select id="prd" name="products">
     <option value="" disabled selected hidden>Choix du séminaire</option>  
-    <option value="Séminaire AI">Séminaire AI</option>
+    <option value="Séminaire NT4">Séminaire NT4</option>
     <option value="Séminaire Finance">Séminaire Finance</option>
     <option value="Séminaire marketing">Séminaire marketing</option>
     <option value="Séminaire de gestion">Séminaire de gestion</option>
