--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@ $(".submit").click(function(){
 </style>
 
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="es">
 <body>
 <!-- multistep form -->
 <form id="msform" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mknqangd" method="post">
   <!-- fieldsets -->
   <fieldset>
-    <h2 class="fs-title">Prenez contact avec nous!</h2>
+    <h2 class="fs-title">Ponte En Contacto Con Nosotras!</h2>
     <!-- Name of Company -->
     <input type="text" name="company" placeholder="nombre de empresa" />
     <!-- Clients First Name -->
