--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@ $(".submit").click(function(){
   <fieldset>
     <h2 class="fs-title">Ponte En Contacto Con Nosotras!</h2>
     <!-- Name of Company -->
-    <input type="text" name="company" placeholder="nombre de empresa" />
+    <input type="text" name="company" placeholder="Nombre de empresa" />
     <!-- Clients First Name -->
     <input type="text" name="firstN" placeholder="Nombre de pila" />
     <!-- Clients Last Name -->
-    <input type="text" name="lastN" placeholder="Apellido" />
+    <input type="text" name="lastN" placeholder="Nombre" />
     <!-- Clients Position -->
     <input type="text" name="position" placeholder="Posición" />
     <!-- Clients Email -->
     <input type="text" name="email" placeholder="Email" />
     <!-- Clients Mobile Number -->
-    <input type="text" name="mobile" placeholder="Número de teléfono móvil" />
+    <input type="text" name="mobile" placeholder="Número de móvil" />
     <!-- Clients Landline Number -->
     <input type="text" name="landL" placeholder="Teléfono fijo" />
     <!-- Clients Postal Address -->
