--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ $(".submit").click(function(){
 <form id="msform" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mknqangd" method="post">
   <!-- fieldsets -->
   <fieldset>
-    <h2 class="fs-title">Ponte En Contacto Con Nosotras!</h2>
+    <h2 class="fs-title">Consigue Una Cotización!</h2>
     <!-- Name of Company -->
     <input type="text" name="company" placeholder="Nombre de empresa" />
     <!-- Clients First Name -->
