--- a/index.html
+++ b/index.html
@@ -207,23 +207,24 @@ $(".submit").click(function(){
     <input type="text" name="seminars" placeholder="Elección de Productos" />
     <select id="sem" name="seminars">
     <option value="" disabled selected hidden>Elección del seminario</option>  
-    <option value="Seminario NT4">Seminario NT4</option>
-    <option value="Seminario de finanzas">Seminario de finanzas</option>
-    <option value="Seminario de marketing">Seminario de marketing</option>
-    <option value="Seminario de gestión">Seminario de gestión</option>
+    <option value="Seminario general">Seminario general</option>
+    <option value="Seminario de Estrategia Tecnológica 4.0">Seminario de Estrategia Tecnológica 4.0</option>
+    <option value="Seminario de Estrategia Empresarial y Financiera 4.0">Seminario de Estrategia Empresarial y Financiera 4.0</option>
+    <option value="Seminario Gestión Humana 4.0 ++">Seminario Gestión Humana 4.0 ++</option>
+    <option value="Seminario Human Marketing 4.0 ++">Seminario Human Marketing 4.0 ++</option>	  
   </select>
 
 <!-- Clients choice of products -->
 <select id="cars" name="products">
-                    <option value="" disabled selected hidden>Elige un Producto</option>
-                    <option value="3month">3 Meses de Soporte</option>
+                    <option value="" disabled selected hidden>Elige un Producto</option>                    
                     <option value="2days">Seminario de 2 Días</option>
-                    <option value="2d3m">Seminario de 2 Días + 3 Meses de Soporte</option>
+		    <option value="3month">4 Meses de Soporte</option>
+                    <option value="2d3m">Seminario de 2 Días + 4 Meses de Soporte</option>
                     <option value="5d6m">Seminario de 5 Días + 6 Meses de Soporte</option>
                 </select>
   
 <!-- Additional Message by Client -->
-<input type="text" name="message" placeholder="Ingrese un Mensaje" />
+<input type="text" name="message" placeholder="Tus Comentarios" />
    
     <input type="submit" name="submit" class="submit action-button" value="Enviar" />
   </fieldset>
